flower 1 and 2 done

--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
+    <div class="container">
+      <div id="gridholder">
+        
+      </div>
+    </div>
     <script>
       window.$ = window.jQuery = require('./jquery-2.1.4.min.js');
       window.Hammer = require('./hammer.min.js');
