--- a/app/flower14/flower14.html
+++ b/app/flower14/flower14.html
@@ -16,8 +16,16 @@
                     <input type="number" class="form-control input-sm" style="width: 75px;margin-right: 25px" id="baseLine" placeholder="0" value.bind="baseLine">
                 </div>
                 <div class="form-group">
-                    <label for="testFreq">Test Frequency (F)</label>
-                    <input type="number" class="form-control input-sm" style="width: 75px;margin-right: 25px" id="testFreq" placeholder="0" value.bind="testFreq">
+                    <label for="testFreq">Apex Frequency (FA)</label>
+                    <input type="number" class="form-control input-sm" style="width: 75px;margin-right: 25px" id="testFreq" placeholder="0" value.bind="apexFreq">
+                </div>
+                <div class="form-group">
+                    <label for="testFreq">Base Frequency (FB)</label>
+                    <input type="number" class="form-control input-sm" style="width: 75px;margin-right: 25px" id="testFreq" placeholder="0" value.bind="baseFreq">
+                </div>
+                <div class="form-group">
+                    <label for="testFreq">Vertex Frequency (FC)</label>
+                    <input type="number" class="form-control input-sm" style="width: 75px;margin-right: 25px" id="testFreq" placeholder="0" value.bind="vertexFreq">
                 </div>
             </form-elements>
             <other-values>
