--- a/app/nav-bar.html
+++ b/app/nav-bar.html
@@ -29,7 +29,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Waves <span class="caret"></span></a>
               <ul class="dropdown-menu">
                 <li repeat.for="row of waveRouter.navigation">
-                    <a href.bind="row.href">${row.title} ${row.href}</a>
+                    <a href.bind="row.href">${row.title}</a>
                 </li>
               </ul>
             </li>
