--- a/app/welcome.html
+++ b/app/welcome.html
@@ -1,11 +1,27 @@
 <template>
     <div id="menuContainer" class="container-fluid">
         <div class="row">
-        <div class="col-xs-2 ${route.nav ? '':'hidden'}" repeat.for="route of lambRoutes" model.bind="route">
-            <h5>${route.title}</h5>
+            <div class="col-xs-12">
+            <h3 style="border-bottom: 1px solid #ddd">Lambdoma</h3>
+            </div>    
         </div>
-        <div class="col-xs-2" repeat.for="route of waveRoutes">
-            <h5>${route.title}</h5>
+        <div class="row">
+        <div class="col-xs-2 text-center ${route.nav ? '':'hidden'}" repeat.for="route of lambRoutes" model.bind="route">
+            <a href="#/${route.route}">
+            <img src="figure25.png" style="margin-top: 8px"/>
+            <h5>${route.title}</h5></a>
+        </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12">
+            <h3 style="border-bottom: 1px solid #ddd">Waves</h3>
+            </div>    
+        </div>
+        <div class="row">
+        <div class="col-xs-2 text-center ${route.nav ? '':'hidden'}" repeat.for="route of waveRoutes">
+            <a href="#/${route.route}">
+            <img src="${route.image}" style="margin-top: 8px"/>
+            <h5>${route.title}</h5></a>
         </div>
         </div>
     </div>
