--- a/app/flower20/flower20.html
+++ b/app/flower20/flower20.html
@@ -1,12 +1,11 @@
 <template>
     <div class="container z-depth-2">
         <require from="../components/wave-canvas"></require>
-        <wave-canvas>
+        <wave-canvas has-generate.bind="false" init.delegate="setInitialContent($event)">
             <form-elements>
             </form-elements>
             <other-values>
             </other-values>
         </wave-canvas>
     </div>
-
 </template>
