--- a/app/nav-bar.html
+++ b/app/nav-bar.html
@@ -9,7 +9,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Robert J. Flower, PhD.</a>
+          <a class="navbar-brand" href="#">The Gilchrist Frequency Program</a>
         </div>
     
         <!-- Collect the nav links, forms, and other content for toggling -->
