--- a/app/nav-bar.html
+++ b/app/nav-bar.html
@@ -34,6 +34,16 @@
               </ul>
             </li>
           </ul>
+          <ul class="nav navbar-nav">
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Stereo Pairs <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li repeat.for="row of stereoRouter.navigation">
+                  <a href.bind="row.href">${row.title}</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
