--- a/app/welcome.html
+++ b/app/welcome.html
@@ -57,5 +57,12 @@
                     <h5>${route.title}</h5></a>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-2 text-center ${route.nav ? '':'hidden'}" repeat.for="route of stereoPairs.group2">
+                <a href="#/${route.route}">
+                    <img src="${route.image}" style="margin-top: 8px"/>
+                    <h5>${route.title}</h5></a>
+            </div>
+        </div>
     </div>
 </template>
