--- a/app/programs/stereoPairs/flower32/flower32.html
+++ b/app/programs/stereoPairs/flower32/flower32.html
@@ -1,13 +1,13 @@
 <template>
     <div class="container z-depth-2">
         <require from="app/components/wave-canvas"></require>
-        <wave-canvas has-generate.bind="false" init.delegate="setInitialContent($event)">
+        <wave-canvas has-generate.bind="true" button-name="Replay" init.delegate="setInitialContent($event)">
             <form-elements>
             </form-elements>
             <other-values>
-                <h5>E = ${e}</h5>
-                <h5>F = ${f}</h5>
-                <h5>ZO = ${zo}</h5>
+                <h5>DE = ${de}</h5>
+                <h5>DF = ${df}</h5>
+                <h5>DZO = ${dzo}</h5>
                 <h5>D = ${d}</h5>
                 <a href="javascript:void(0)" class="moreLink">More...</a>
                 <div class="hiddenDetails hidden">
